--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "elegant-stitches-boutique",
   "version": "1.0.0",
   "private": true,
+  "homepage": "https://tarun2231.github.io/Botique_Website-OCT12-V1.0",
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -9,15 +10,18 @@
     "react-scripts": "5.0.1"
   },
   "devDependencies": {
-    "tailwindcss": "^3.3.0",
     "autoprefixer": "^10.4.16",
-    "postcss": "^8.4.31"
+    "gh-pages": "^6.3.0",
+    "postcss": "^8.4.31",
+    "tailwindcss": "^3.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -37,4 +41,3 @@
     ]
   }
 }
-
